--- a/jest-demo/package.json
+++ b/jest-demo/package.json
@@ -1,22 +1,16 @@
 {
   "name": "jest-demo",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "description": "",
   "scripts": {
-    "test": "jest",
     "start": "babel src --out-dir public/scripts/ --presets=react && live-server public"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-jest": "^22.0.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
+  "author": "Shagun Madhikarmi",
+  "license": "MIT",
+  "dependencies": {
+    "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
-    "jest": "^22.0.4",
-    "live-server": "^1.2.0",
-    "react-test-renderer": "^16.2.0"
+    "live-server": "^1.2.0"
   }
 }
