--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "Shagun Madhikarmi",
   "license": "MIT",
+  "scripts": {
+    "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch && live-server public"
+  },
   "dependencies": {
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1"
