Removes watch glad to Babel as it interferes with LiveServer running

--- a/indecision-app/package.json
+++ b/indecision-app/package.json
@@ -5,7 +5,7 @@
   "author": "Shagun Madhikarmi",
   "license": "MIT",
   "scripts": {
-    "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch && live-server public"
+    "start": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react && live-server public"
   },
   "dependencies": {
     "babel-preset-env": "^1.5.2",
