--- a/redux-demo/package.json
+++ b/redux-demo/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
+    "uuid": "^3.2.1",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
